<resources>
    <string name="app_name">Just Kotlin</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="order_summary_head">Order summary</string>
    <string name="name_label">Name :  </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you!</string>
    <string name="reset">Cancel</string>
    <string name="confirm">Send order</string>
    <string name="added_whipped">"Added whipped cream ? "</string>
    <string name="added_chocolate">Added chocolate ?</string>
    <string name="counter">1</string>
    <string name="no_more_than_99">You can\'t have more than 99 coffee</string>
    <string name="no_less_than_1">You can\'t have less than 1 coffee</string>
    <string name="no_name">Please enter your name (min 3 char)</string>
    <string name="order_from">Coffee order from</string>
    <string name="no_order">There are no order summary</string>
</resources>
